syntax = "proto3";

option go_package = "github.com/utrack/yuki/integration/binding_with_different_types/pb;strings";
// or just
//option go_package = "./pb;strings";

import "google/api/annotations.proto";

service Strings {
    rpc Echo (Types) returns (Types) {
        option (google.api.http) = {
            get: "/echo"
        };
    }
}

enum Enum {
    UNKNOWN = 0;
    FOO = 1;
}

message Types {
    double d = 1;
    float f = 2;
    int32 i32 = 3;
    int64 i64 = 4;
    uint32 ui32 = 5;
    uint64 ui64 = 6;
    sint32 si32 = 7;
    sint64 si64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool b = 13;
    string s = 14;
    bytes bytes = 15;
    Enum e = 16;
}